# skyth

./: .continues-handoff.md  .gitignore  .ignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDENTITY.md  LICENSE  README.md  RESUME.md  SPECS.md  USER.md  WORKFLOW.md  biome.json  bunfig.toml  commit_msg.txt  index.ts  justfile  knowledge.md  msg_filter.py  package.json  patch.py  patch_chat.py  patch_chat2.py  patch_chatview.py  patch_chatview_import.py  patch_gateway.py  patch_web.py  pr_desc.md  skills-lock.json  tsconfig.json  update_ai_sdk.patch  update_base.patch
.jules/: bolt.md  palette.md  sentinel.md
Components/: Components.md
legacy(py)/: .gitignore  AGENTS.md  config.yml  main.py  plan.md  requirements.txt  setup_providers.py
legacy(ts)/: .bunignore  .ignore  justfile
modules/: compat-shims.d.ts
quasar/: Cargo.toml
quasar/src/: error.rs  fingerprint.rs  lib.rs  main.rs  paths.rs  types.rs  vfs_mem.rs
quasar/src/auth/: mod.rs  permissions.rs  store.rs
quasar/src/branch/: mod.rs
quasar/src/crypto/: kdf.rs  mod.rs  seal.rs
quasar/src/daemon/: mod.rs
quasar/src/db/: mod.rs  open.rs  schema.rs
quasar/src/disk/: mod.rs
quasar/src/epsilon/: cdc.rs  mod.rs  restore.rs  snapshot.rs  store.rs
quasar/src/event_bus/: mod.rs
quasar/src/ipc/: handler_utils.rs  handlers.rs  handlers_tests.rs  mod.rs  protocol.rs  server.rs  service_handlers.rs  unix.rs  windows_pipe.rs
quasar/src/services/: cron.rs  export.rs  gateway.rs  heartbeat.rs  memory.rs  mod.rs  queue.rs  run_events.rs  state.rs  state_store.rs
quasar/src/vfs/: mod.rs  ops.rs  schema.rs  types.rs
scripts/: add_tool_headers.py  count_core_lines.sh  count_skyth_files.sh  fix_agent_tests.py  fix_imports.py  fix_pending_merge_tests.py  fix_test_imports.py  fix_tool_imports.py  loc_check.sh  (+4 more)
(+1364 files in other folders)
