[package]
name = "quasar"
version = "0.10.0"
edition = "2024"
description = "Skyth Quasar v1: local state authority, VFS, Epsilon VC, IPC"

[lib]
name = "quasar"
path = "src/lib.rs"

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
# Errors
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Crypto: Argon2id KDF + AES-256-GCM for header sealing
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

# SQLite with SQLCipher for AES-256 at rest
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "blob"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Paths
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "fs"] }

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Content-defined chunking for Epsilon
fastcdc = "3"

[dev-dependencies]
tempfile = "3"
